compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__as_module_const.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\n          pub const data = <<\n            0x1,\n            2,\n            2:size(16),\n            0x4:size(32),\n            \"Gleam\":utf8,\n            // 4.2:float,\n            <<\n              <<1, 2, 3>>:bits,\n              \"Gleam\":utf8,\n              1024\n            >>:bits\n          >>\n        "
snapshot_kind: text
---
----- SOURCE CODE

          pub const data = <<
            0x1,
            2,
            2:size(16),
            0x4:size(32),
            "Gleam":utf8,
            // 4.2:float,
            <<
              <<1, 2, 3>>:bits,
              "Gleam":utf8,
              1024
            >>:bits
          >>
        

----- COMPILED NIX
let
  inherit
    (builtins.import ./../gleam.nix)
    parseNumber
    toBitArray
    sizedInt
    stringBits
    ;
  
  data =
    toBitArray
      [
        (parseNumber "0x1")
        2
        (sizedInt 2 16)
        (sizedInt (parseNumber "0x4") 32)
        (stringBits "Gleam")
        (toBitArray [ (toBitArray [ 1 2 3 ]).buffer (stringBits "Gleam") 1024 ]).buffer
      ];
in
{ inherit data; }
