compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__bit_array_literal_string_constant_is_treated_as_utf8.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "const a = <<\"hello\", \" \", \"world\">>"
snapshot_kind: text
---
----- SOURCE CODE
const a = <<"hello", " ", "world">>

----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) toBitArray stringBits;
  
  a = toBitArray [ (stringBits "hello") (stringBits " ") (stringBits "world") ];
in
{ }
