compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__bit_array_literal_string_is_treated_as_utf8.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<\"hello\", \" \", \"world\">>\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"hello", " ", "world">>
}

----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) toBitArray stringBits;
  
  main =
    { }:
    toBitArray [ (stringBits "hello") (stringBits " ") (stringBits "world") ];
in
{ inherit main; }
