compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__empty.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<>>
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  go = { }: toBitArray [ ];
in
{ }
