compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__explicit_sized.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:size(64)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:size(64)>>
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) toBitArray sizedInt;
  
  go = { }: toBitArray [ (sizedInt 256 64) ];
in
{ }
