compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__integer.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:int>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<256:int>>
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) toBitArray;
  
  go = { }: toBitArray [ 256 ];
in
{ }
