compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__match_bytes.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<1, y>> = x\n  y\n}\n"
snapshot_kind: text
---
let
  inherit (builtins.import ./../gleam.nix) makeError byteSize byteAt;
  
  go =
    x:
    let
      _assert' =
        if (byteAt x 0) != 1 || byteSize x != 2 then
          builtins.throw
            (makeError
              "let_assert"
              "my/mod"
              3
              "go"
              "Pattern match failed, no pattern matched the value."
              { value = x; })
        else null;
      y = builtins.seq _assert' (byteAt x 1);
    in
    builtins.seq _assert' y;
in
{ }
