compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__bit_arrays__match_dynamic_size_error.snap
---
source: compiler-core/src/nix/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let n = 16\n  let assert <<a:size(n)>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let n = 16
  let assert <<a:size(n)>> = x
}


----- ERROR
error: Unsupported feature for compilation target
  ┌─ /src/nix/error.gleam:4:16
  │
4 │   let assert <<a:size(n)>> = x
  │                ^^^^^^^^^

This bit array size option in patterns is not supported for Nix compilation.
